# slackr

./: README.md  pyproject.toml
backend/: assumptions.md
backend/src/: auth.py  channel.py  channels.py  error.py  helper_functions.py  other.py  server.py
backend/src/fn_tests/auth_tests/: auth_logout_test.py
backend/src/fn_tests/channel_tests/: channel_details_test.py  channel_join_test.py  channel_messages_test.py  channel_removeowner_test.py
backend/src/fn_tests/channels_tests/: channels_create_test.py
backend/src/fn_tests/other_tests/: standup_active_test.py  standup_start_test.py  users_test.py
backend/src/fn_tests/user_tests/: user_profile_sethandle_test.py  user_profile_setname_test.py
backend/src/http_tests/: channel_test.py  channels_test.py  message_test.py  user_test.py
frontend/: .env  package-lock.json
frontend/src/components/Admin/: index.js
slackr-backend/: datastore.p
slackr-backend/src/: datastore.p  echo_test.py  hangman.py  helper_functions.py  message.py  user.py
slackr-backend/src/fn_tests/: conftest.py
slackr-backend/src/fn_tests/auth_tests/: auth_login_test.py  auth_register_test.py
slackr-backend/src/fn_tests/channel_tests/: channel_addowner_test.py  channel_invite_test.py  channel_leave_test.py
slackr-backend/src/fn_tests/channels_tests/: channels_list_test.py  channels_listall_test.py
slackr-backend/src/fn_tests/message_tests/: message_edit_test.py  message_remove_test.py  message_send_test.py
slackr-backend/src/http_tests/: auth_test.py  conftest.py  hangman_test.py  other_test.py
(+6 files in other folders)
